{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "8913c8df-6ad2-4538-99db-bfa88d31bdd0",
            "actions": [
                {
                    "name": "OnJump",
                    "type": "Button",
                    "id": "1c7516aa-6eb9-48e6-985b-3d8432c8967a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnMoveRight",
                    "type": "Button",
                    "id": "0bc9528b-de02-406a-9ec9-bc444b6a31ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OnMoveLeft",
                    "type": "Button",
                    "id": "80f7b11a-fa36-4390-8924-135733cf3182",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2b4c81f7-1dc4-45b2-92ec-7f468501dca9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "776f184c-2959-4175-a407-28863efb18b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09a837aa-1739-4a3a-8de8-c161899e8081",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53855ce4-8713-495f-bd72-a5fd2a2f0a1f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e0bfd96-cbac-4b0a-9904-e613d33a878b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnMoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fe4b92e-f915-4656-a859-901e6350cb2c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad689ea6-13f8-427b-971f-f0af74945162",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}